--- a/wp-content/themes/publiframework/assets/src/scss/utils/variabili.scss
+++ b/wp-content/themes/publiframework/assets/src/scss/utils/variabili.scss
@@ -61,10 +61,10 @@ $blue3: #00196A !default;
 
 
 @mixin boxshadow {
-  box-shadow: 0px 3px 6px #00000029;
+  box-shadow: 0 3px 6px #00000029;
 }
 @mixin gradiente_blu {
-  background: transparent linear-gradient(109deg, #000000 0%, #0C1F4D 34%, #183C96 54%, #86C8E6 100%) 0% 0% no-repeat padding-box;
+  background: transparent linear-gradient(109deg, #000000 0, #0C1F4D 34%, #183C96 54%, #86C8E6 100%) 0 0 no-repeat padding-box;
 }
 
 /******************************************************
