--- a/wp-content/themes/publiframework/assets/src/scss/layout/_header.scss
+++ b/wp-content/themes/publiframework/assets/src/scss/layout/_header.scss
@@ -3,47 +3,132 @@
 ******************************************************/
 
 .site-header {
+    position: sticky;
+    top: 0;
+    left: 0;
+    z-index: 20;
+    background: $back-col;
+    filter: drop-shadow(0 1rem 2rem rgba($black, 0.08));
+
+    .logo {
+        position: absolute;
+        top: -4rem;
+        left: 50%;
+        translate: -50%;
+        display: grid;
+        place-content: center;
+        width: 30rem;
+        height: 30rem;
+        background: $back-col;
+        border-radius: 50%;
+        overflow: hidden;
+
+        img {
+            margin-top: 6rem;
+            width: 20.3rem;
+            transition: width 0.3s ease-in-out;
+        }
+    }
+
     //Mobile hamburger
     .navbar-toggler {
-        padding: 0;
-        border: 0;
+        //padding: 0;
+        //border: 0;
+        //
+        //.navbar-toggler-icon {
+        //    display: block;
+        //    width: auto;
+        //    height: auto;
+        //    text-align: center;
+        //    background: transparent;
+        //
+        //    .icon {
+        //        width: 32px;
+        //
+        //        &.icon-open {
+        //            display: none;
+        //        }
+        //
+        //        &.icon-close {
+        //            width: 21px;
+        //            transform: translate(-5px, 0);
+        //            color: $primary;
+        //        }
+        //    }
+        //}
+        //
+        //&.collapsed {
+        //    .navbar-toggler-icon {
+        //        .icon-open {
+        //            display: block;
+        //        }
+        //
+        //        .icon-close {
+        //            display: none;
+        //        }
+        //    }
+        //}
+        //
+        //&:focus {
+        //    box-shadow: none;
+        //}
+    }
 
-        .navbar-toggler-icon {
-            display: block;
-            width: auto;
-            height: auto;
-            text-align: center;
-            background: transparent;
+    .navbar-collapse {
+        display: flex;
 
-            .icon {
-                width: 32px;
+        .navbar-nav {
+            width: 50%;
+            gap: 0 15%;
 
-                &.icon-open {
-                    display: none;
+            &:last-child {
+                justify-content: flex-end;
+                gap: 10%;
+            }
+
+            & > li {
+                & > a {
+                    padding: 7rem 0;
+                    font-weight: $font-bold;
+                    font-size: 2rem;
+                    color: inherit;
+                    border-bottom: .4rem solid transparent;
+
+                    &:hover,
+                    &.show {
+                        border-bottom-color: $primary;
+                    }
+                }
+                &.current-menu-item {
+                    & > a {
+                        border-bottom-color: $primary;
+                    }
                 }
 
-                &.icon-close {
-                    width: 21px;
-                    transform: translate(-5px, 0);
-                    color: $primary;
+                .dropdown-menu {
+                    position: absolute;
+                    left: -4rem;
+                    min-width: 30rem;
+                    margin-top: 0;
+                    border: none;
+                    border-radius: 0;
+                    background: $back-col;
+
+                    .dropdown-item {
+                        padding: 1rem 4rem;
+                        font-weight: $font-bold;
+                        font-size: 1.8rem;
+                        color: $font-col;
+                        background: transparent;
+
+                        &:hover,
+                        &:focus-visible,
+                        &.active {
+                            background: rgba($black, .05);
+                        }
+                    }
                 }
             }
-        }
-
-        &.collapsed {
-            .navbar-toggler-icon {
-                .icon-open {
-                    display: block;
-                }
-
-                .icon-close {
-                    display: none;
-                }
-            }
-        }
-
-        &:focus {
-            box-shadow: none;
         }
     }
 }
