add block text-side-image

--- a/wp-content/themes/publiframework/assets/src/index.scss
+++ b/wp-content/themes/publiframework/assets/src/index.scss
@@ -1,15 +1,15 @@
 // Dependencies
-@import "./scss/utils/variabili.scss";
-@import "./scss/utils/bootstrap.scss";
+@import './scss/utils/variabili.scss';
+@import './scss/utils/bootstrap.scss';
 //@import "./scss/utils/swiper.scss";
-@import "./scss/utils/fontello.scss";
+@import './scss/utils/fontello.scss';
 
 // Globals
+@import './scss/global/mixins';
 @import './scss/global/base';
 @import './scss/global/typography';
 @import './scss/global/utilities';
-// @import 'global/mixins';
-// @import 'global/animations';
+// @import './scss/global/animations';
 
 // Components
 @import './scss/components/buttons';
@@ -18,12 +18,12 @@
 
 // Blocks
 @import 'scss/blocks/site-slider-video';
+@import 'scss/blocks/block-text-side-image';
 
 // Pages
 @import './scss/pages/home';
 @import './scss/pages/internals';
 
 // Layout
-@import "./scss/layout/header.scss";
-@import "./scss/layout/footer.scss";
-
+@import './scss/layout/header.scss';
+@import './scss/layout/footer.scss';
