--- a/wp-content/themes/publiframework/assets/src/scss/global/_mixins.scss
+++ b/wp-content/themes/publiframework/assets/src/scss/global/_mixins.scss
@@ -32,28 +32,55 @@
     }
 }
 
-// List with custom bullet
-@mixin list-custom() {
-    list-style: none;
-    padding-left: 0;
-    li {
-        display: flex;
-        margin-bottom: 0.5rem;
+@mixin section-title($size: 'medium') {
+    font-weight: $font-bold;
+    font-size: 5rem;
+    line-height: 1.2;
 
-        &:before {
-            content: '';
-            flex-shrink: 0;
-            margin-top: 1.2rem;
-            margin-right: 1.5rem;
-            width: 0.5rem;
-            height: 0.5rem;
-            border-radius: 50%;
-            background-color: $primary;
-        }
+    & > * {
+        font-size: inherit;
+        font-weight: inherit;
+        line-height: inherit;
+    }
+
+    &.big {
+        font-size: 8rem;
+        line-height: 1.1;
+    }
+
+    @if $size == 'small' {
+        font-size: 3rem;
     }
 }
 
-// How to use this mixin
-// .element {
-//     @include mixin-name;
-// }
+@mixin image-fit($isAbsolute: false) {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+
+    @if $isAbsolute {
+        position: absolute;
+        top: 0;
+        left: 0;
+    }
+}
+// List with custom bullet
+//@mixin list-custom() {
+//    list-style: none;
+//    padding-left: 0;
+//    li {
+//        display: flex;
+//        margin-bottom: 0.5rem;
+//
+//        &:before {
+//            content: '';
+//            flex-shrink: 0;
+//            margin-top: 1.2rem;
+//            margin-right: 1.5rem;
+//            width: 0.5rem;
+//            height: 0.5rem;
+//            border-radius: 50%;
+//            background-color: $primary;
+//        }
+//    }
+//}
