--- a/wp-content/themes/publiframework/assets/src/scss/global/_utilities.scss
+++ b/wp-content/themes/publiframework/assets/src/scss/global/_utilities.scss
@@ -3,13 +3,5 @@
  ***************************************************/
 
 img.image-fit {
-    width: 100%;
-    height: 100%;
-    object-fit: cover;
-
-    &.absolute {
-        position: absolute;
-        top: 0;
-        left: 0;
-    }
+    @include image-fit();
 }
