--- a/wp-content/themes/publiframework/assets/src/scss/global/_typography.scss
+++ b/wp-content/themes/publiframework/assets/src/scss/global/_typography.scss
@@ -37,6 +37,10 @@ h4 {
     @include section-title();
 }
 
+.section-subtitle {
+    @include section-title('small');
+}
+
 .titolo_pb {
     @include section-title();
 
