--- a/wp-content/themes/publiframework/assets/src/scss/utils/variabili.scss
+++ b/wp-content/themes/publiframework/assets/src/scss/utils/variabili.scss
@@ -5,42 +5,42 @@
  ******************************************************/
 $spacer: 1rem !default;
 $spacers: (
-  0: 0,
-  1: $spacer * .5,
-  2: $spacer * 1,
-  3: $spacer * 2,
-  4: $spacer * 3,
-  5: $spacer * 4,
-  6: $spacer * 5,
-  7: $spacer * 6,
-  8: $spacer * 7,
-  9: $spacer * 8,
-  10: $spacer * 10
+    0: 0,
+    1: $spacer * 0.5,
+    2: $spacer * 1,
+    3: $spacer * 2,
+    4: $spacer * 3,
+    5: $spacer * 4,
+    6: $spacer * 5,
+    7: $spacer * 6,
+    8: $spacer * 7,
+    9: $spacer * 8,
+    10: $spacer * 10,
 ) !default;
 
 $grid-breakpoints: (
-  xs: 0,
-  sm: 576px,
-  md: 768px,
-  lg: 992px,
-  xl: 1200px,
-  xxl: 1400px,
-  //xxxl: 1600px
+    xs: 0,
+    sm: 576px,
+    md: 768px,
+    lg: 992px,
+    xl: 1200px,
+    xxl: 1400px,
+    //xxxl: 1600px
 ) !default;
 // scss-docs-end grid-breakpoints
 
 // scss-docs-start container-max-widths
 $container-max-widths: (
-  sm: 540px,
-  md: 720px,
-  lg: 960px,
-  xl: 1140px,
-  xxl: 1320px,
-  //xxxl: 1520px
+    sm: 540px,
+    md: 720px,
+    lg: 960px,
+    xl: 1140px,
+    xxl: 1320px,
+    //xxxl: 1520px
 ) !default;
 // scss-docs-end container-max-widths
 
-$input-btn-focus-box-shadow:    none !default;
+$input-btn-focus-box-shadow: none !default;
 $input-focus-border-color: #000 !default;
 
 $gray-100: #f8f9fa !default;
@@ -60,10 +60,10 @@ $gray-900: #212529 !default;
 //COLORS
 $white: #fff;
 $black: #000;
-$light-gray: #FAFAFA;
+$light-gray: #fafafa;
 $font-col: #262626;
 $back-col: $white;
-$primary: #0455C0;
+$primary: #0455c0;
 $secondary: orange;
 
 // TYPOGRAPHY
@@ -75,5 +75,6 @@ $font-bold: 700;
 
 // Dynamic values
 :root {
-  --body-font-size: 1.8rem; // 16px
+    --body-font-size: 1.8rem; // 16px
+    --header-scrolled-height: 17.4rem;
 }
