--- a/wp-content/themes/publiframework/assets/src/index.scss
+++ b/wp-content/themes/publiframework/assets/src/index.scss
@@ -20,6 +20,7 @@
 @import 'scss/blocks/block-slider-video';
 @import 'scss/blocks/block-text-side-image';
 @import 'scss/blocks/block-slider-fullwidth';
+@import 'scss/blocks/block-news-section';
 
 // Pages
 @import './scss/pages/home';
