--- a/wp-content/themes/publiframework/assets/src/scss/layout/_footer.scss
+++ b/wp-content/themes/publiframework/assets/src/scss/layout/_footer.scss
@@ -1,3 +1,7 @@
 /******************************************************
     SITE FOOTER
 ******************************************************/
+
+#footer {
+    background: #ccc;
+}
