add block from section

--- a/wp-content/themes/publiframework/assets/src/index.scss
+++ b/wp-content/themes/publiframework/assets/src/index.scss
@@ -21,6 +21,7 @@
 @import 'scss/blocks/block-text-side-image';
 @import 'scss/blocks/block-slider-fullwidth';
 @import 'scss/blocks/block-news-section';
+@import 'scss/blocks/block-form-section';
 
 // Pages
 @import './scss/pages/home';
