--- a/wp-content/themes/publiframework/assets/src/scss/blocks/block-news-section.scss
+++ b/wp-content/themes/publiframework/assets/src/scss/blocks/block-news-section.scss
@@ -7,11 +7,11 @@
     padding-bottom: 8rem;
     background: #fff; /* TODO: change with particles */
 
-    .news-section {
-        .section-title {
-            margin-bottom: 5rem;
-        }
+    .titolo_pb {
+        margin-bottom: 5rem;
+    }
 
+    .news-section {
         .cta {
             margin-top: 5rem;
         }
