--- a/wp-content/themes/publiframework/assets/src/scss/utils/variabili.scss
+++ b/wp-content/themes/publiframework/assets/src/scss/utils/variabili.scss
@@ -61,6 +61,7 @@ $gray-900: #212529 !default;
 $white: #fff;
 $black: #000;
 $light-gray: #fafafa;
+$dark-gray: #8e8e8e;
 $font-col: #262626;
 $back-col: $white;
 $primary: #0455c0;
