--- a/wp-content/themes/publiframework/blocks/blocks/news-section.twig
+++ b/wp-content/themes/publiframework/blocks/blocks/news-section.twig
@@ -1,7 +1,5 @@
 <div class="news-section">
-    <div class="section-title text-center">{{ fields.titolo_news_section }}</div>
-
-    <div class="row gx-md-4 boxes-news">
+    <div class="row g-md-4 boxes-news">
         {% for post in posts %}
             <div class="col-md-4">
                 <div class="box">
