--- a/wp-content/themes/publiframework/assets/src/scss/components/_form.scss
+++ b/wp-content/themes/publiframework/assets/src/scss/components/_form.scss
@@ -3,38 +3,58 @@
 ******************************************************/
 
 .wpcf7-form {
-    font-size: 1.6rem;
+    font-size: 1.8rem;
 
     .wpcf7-form-control-wrap {
         display: block;
-        margin-bottom: 1.75rem;
+        margin-bottom: 3rem;
+    }
+
+    label {
+        display: block;
     }
 
     input[type='text'],
     input[type='email'],
     input[type='number'],
     input[type='tel'],
-    //select,
+    select,
     textarea {
         display: block;
         width: 100%;
-        height: 40px;
+        height: 5rem;
+        margin-top: 0.7rem;
         padding: 0 1rem;
         color: $font-col;
-        background: #ccc;
-        border: none;
+        font-size: 1.6rem;
+        background: $white;
+        border: 1px solid transparent;
         border-radius: 0;
         outline: none;
-        transition: background 0.3s;
+        transition: border 0.3s;
         &:hover,
         &:focus {
-            background: darken(#ccc, 5%);
+            border-color: darken(#ccc, 5%);
         }
     }
 
     textarea {
-        height: 100px;
+        height: 27.7rem;
         padding: 1rem;
+    }
+
+    select {
+        &.empty {
+            color: gray;
+        }
+
+        option {
+            color: $font-col;
+
+            &:first-child {
+                color: gray;
+            }
+        }
     }
 
     ::placeholder {
@@ -43,29 +63,36 @@
         opacity: 1; /* Firefox */
     }
 
-//     Custom select
-//     .wrap-select {
-//         position: relative;
-//         background: #ccc;
-//         cursor: pointer;
-//         .wpcf7-form-control-wrap::after {
-//             content: '';
-//             position: absolute;
-//             top: 20px;
-//             right: 10px;
-//             width: 20px;
-//             height: 20px;
-//             transform: translateY(-50%);
-//             background-image: url('data:image/svg+xml;utf8,<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24"><path fill="currentColor" d="M7.41 8.58L12 13.17l4.59-4.59L18 10l-6 6-6-6z"/></svg>');
-//         }
-//         select {
-//             z-index: 1;
-//             position: relative;
-//             appearance: none;
-//             cursor: pointer;
-//             background: transparent;
-//         }
-//     }
+    // Custom select
+    .wrap-select {
+        position: relative;
+        background: $white;
+        cursor: pointer;
+        .wpcf7-form-control-wrap::after {
+            content: '';
+            position: absolute;
+            opacity: 0.5;
+            top: 25px;
+            right: 10px;
+            width: 20px;
+            height: 20px;
+            transform: translateY(-50%);
+            background-image: url('data:image/svg+xml;utf8,<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24"><path fill="currentColor" d="M7.41 8.58L12 13.17l4.59-4.59L18 10l-6 6-6-6z"/></svg>');
+        }
+        select {
+            z-index: 1;
+            position: relative;
+            appearance: none;
+            cursor: pointer;
+            background: transparent;
+        }
+    }
+
+    .legenda,
+    .wrap-acceptance {
+        font-size: 1.4rem;
+        color: $dark-gray;
+    }
 
     .legenda {
         margin-bottom: 0.5rem;
@@ -97,20 +124,20 @@
                     &::before {
                         content: '';
                         position: absolute;
-                        top: 0;
+                        top: 0.3rem;
                         left: 0;
-                        width: 12px;
-                        height: 12px;
+                        width: 1.2rem;
+                        height: 1.2rem;
                         border: 1px solid currentColor;
                     }
 
                     &::after {
                         content: '';
                         position: absolute;
-                        top: 3px;
-                        left: 3px;
-                        width: 6px;
-                        height: 6px;
+                        top: 0.6rem;
+                        left: 0.3rem;
+                        width: 0.6rem;
+                        height: 0.6rem;
                         background: $primary;
                         opacity: 0;
                         transition: opacity 0.2s;
@@ -138,7 +165,7 @@
 
         .wpcf7-spinner {
             position: absolute;
-            top: 48px;
+            top: 6rem;
             right: 16px;
             margin: 0;
             background: #4e545a;
@@ -152,6 +179,7 @@
 .wpcf7 form.invalid .wpcf7-response-output,
 .wpcf7 form.unaccepted .wpcf7-response-output {
     padding: 0.25rem 0.5rem;
+    font-size: 1.4rem;
     color: $white;
     border: none;
     background: #e63746;
@@ -162,9 +190,11 @@
 .wpcf7 form.invalid .wpcf7-response-output,
 .wpcf7 form.unaccepted .wpcf7-response-output {
     margin: 1rem 0 0;
+    font-size: 1.4rem;
 }
 
 .wpcf7 form.sent .wpcf7-response-output {
+    font-size: 1.4rem;
     color: $white;
     border: 0;
     background: rgba(green, 0.65);
