--- a/wp-content/themes/publiframework/assets/src/scss/layout/_header.scss
+++ b/wp-content/themes/publiframework/assets/src/scss/layout/_header.scss
@@ -10,6 +10,18 @@
     background: $back-col;
     filter: drop-shadow(0 1rem 2rem rgba($black, 0.08));
 
+    // border top avove the logo circle
+    &::before {
+        content: '';
+        position: absolute;
+        z-index: 2;
+        top: 0;
+        left: 0;
+        width: 100%;
+        height: 0.4rem;
+        background: $primary;
+    }
+
     .logo {
         position: absolute;
         top: -4rem;
@@ -92,7 +104,7 @@
                     font-weight: $font-bold;
                     font-size: 2rem;
                     color: inherit;
-                    border-bottom: .4rem solid transparent;
+                    border-bottom: 0.4rem solid transparent;
 
                     &:hover,
                     &.show {
@@ -124,7 +136,7 @@
                         &:hover,
                         &:focus-visible,
                         &.active {
-                            background: rgba($black, .05);
+                            background: rgba($black, 0.05);
                         }
                     }
                 }
