--- a/wp-content/themes/publiframework/assets/src/scss/layout/_footer.scss
+++ b/wp-content/themes/publiframework/assets/src/scss/layout/_footer.scss
@@ -3,5 +3,147 @@
 ******************************************************/
 
 #footer {
-    background: #ccc;
+    padding: 10rem 0 0;
+    color: $white;
+    background: $black;
+
+    a {
+        color: inherit;
+        text-decoration: none;
+    }
+
+    ul,
+    ol {
+        margin: 0;
+        padding: 0;
+        list-style: none;
+    }
+
+    .titolo-widget-sidebar {
+        display: block;
+        margin-bottom: 1.5rem;
+        font-size: 2.2rem;
+        font-weight: $font-bold;
+        color: rgba($white, 0.5);
+    }
+
+    .link-list-with-title {
+        ul,
+        ol {
+            li {
+                margin-bottom: 1rem;
+            }
+
+            a {
+                &:hover,
+                &:focus-visible {
+                    color: lighten($primary, 20%);
+                }
+            }
+        }
+    }
+
+    .link-list {
+        a {
+            display: inline-block;
+            margin-bottom: 1.5rem;
+            font-size: 2.2rem;
+            font-weight: $font-bold;
+            color: rgba($white, 0.5);
+
+            &:hover,
+            &:focus-visible {
+                color: $white;
+            }
+        }
+    }
+
+    .contact-info {
+        .textwidget {
+            p:last-child {
+                margin-bottom: 0;
+            }
+
+            br {
+                display: none;
+            }
+        }
+
+        .icon {
+            display: grid;
+            place-content: center;
+            width: 5rem;
+            height: 5rem;
+            background-color: $primary;
+            border-radius: 50%;
+
+            svg {
+                width: 2.7rem;
+            }
+        }
+
+        a {
+            display: block;
+            font-weight: $font-bold;
+
+            &:first-child {
+                margin-top: 0.5rem;
+                font-size: 2.5rem;
+                line-height: 1;
+            }
+            &:last-child {
+                font-size: 1.6rem;
+            }
+
+            &:hover,
+            &:focus-visible {
+                color: lighten($primary, 20%);
+            }
+        }
+    }
+
+    .social-icons {
+        font-size: 2.2rem;
+        display: flex;
+        gap: 2rem;
+
+        a {
+            display: inline-block;
+            transition: scale 0.1s linear;
+            &:hover,
+            &:focus-visible {
+                scale: 1.3;
+            }
+        }
+
+        i::before {
+            margin: 0;
+        }
+    }
+
+    .copyright {
+        margin-top: 8rem;
+        background: $font-col;
+        font-size: 1.4rem;
+        color: rgba($white, 0.5);
+
+        a {
+            &:hover,
+            &:focus-visible {
+                color: $white;
+
+                img {
+                    opacity: 1;
+                }
+            }
+        }
+
+        .credits {
+            img {
+                width: 8rem;
+                opacity: 0.5;
+                transition: opacity 0.3s;
+            }
+        }
+    }
 }
