--- a/wp-content/themes/publiframework/assets/src/scss/utils/fontello.scss
+++ b/wp-content/themes/publiframework/assets/src/scss/utils/fontello.scss
@@ -1,75 +1,109 @@
 @font-face {
     font-family: 'fontello';
-    src: url('./fontello/font/fontello.eot?23671275');
-    src: url('./fontello/font/fontello.eot?23671275#iefix') format('embedded-opentype'),
-         url('./fontello/font/fontello.woff2?23671275') format('woff2'),
-         url('./fontello/font/fontello.woff?23671275') format('woff'),
-         url('./fontello/font/fontello.ttf?23671275') format('truetype'),
-         url('./fontello/font/fontello.svg?23671275#fontello') format('svg');
+    src: url('../fontello/font/fontello.eot?23671275');
+    src:
+        url('../fontello/font/fontello.eot?23671275#iefix')
+            format('embedded-opentype'),
+        url('../fontello/font/fontello.woff2?23671275') format('woff2'),
+        url('../fontello/font/fontello.woff?23671275') format('woff'),
+        url('../fontello/font/fontello.ttf?23671275') format('truetype'),
+        url('../fontello/font/fontello.svg?23671275#fontello') format('svg');
     font-weight: normal;
     font-style: normal;
-  }
+}
 
-  //  Chrome hack: SVG is rendered more smooth in Windozze. 100% magic, uncomment if you need it. 
-  //  Note, that will break hinting! In other OS-es font will be not as sharp as it could be 
-  
-  // @media screen and (-webkit-min-device-pixel-ratio:0) {
-  //   @font-face {
-  //     font-family: 'fontello';
-  //     src: url('../font/fontello.svg?23671275#fontello') format('svg');
-  //   }
-  // }
-  
-  [class^="icon-"]:before, [class*=" icon-"]:before {
-    font-family: "fontello";
+//  Chrome hack: SVG is rendered more smooth in Windozze. 100% magic, uncomment if you need it.
+//  Note, that will break hinting! In other OS-es font will be not as sharp as it could be
+
+// @media screen and (-webkit-min-device-pixel-ratio:0) {
+//   @font-face {
+//     font-family: 'fontello';
+//     src: url('../font/fontello.svg?23671275#fontello') format('svg');
+//   }
+// }
+
+[class^='icon-']:before,
+[class*=' icon-']:before {
+    font-family: 'fontello';
     font-style: normal;
     font-weight: normal;
     speak: never;
-  
+
     display: inline-block;
     text-decoration: inherit;
     width: 1em;
-    margin-right: .2em;
+    margin-right: 0.2em;
     text-align: center;
     // opacity: .8;
-  
+
     // For safety - reset parent styles, that can break glyph code
     font-variant: normal;
     text-transform: none;
-  
+
     // fix buttons height, for twitter bootstrap
     line-height: 1em;
-  
+
     // Animation center compensation - margins should be symmetric
     // remove if not needed
-    margin-left: .2em;
-  
+    margin-left: 0.2em;
+
     // you can be more comfortable with increased icons size
     // font-size: 120%;
-  
+
     // Font smoothing. That was taken from TWBS
     -webkit-font-smoothing: antialiased;
     -moz-osx-font-smoothing: grayscale;
-  
+
     // Uncomment for 3D effect
     // text-shadow: 1px 1px 1px rgba(127, 127, 127, 0.3);
-  }
-  
-  .icon-down:before { content: '\e800'; }
-  .icon-left:before { content: '\e801'; }
-  .icon-right:before { content: '\e802'; }
-  .icon-up:before { content: '\e803'; }
-  .icon-zoom-in:before { content: '\e804'; }
-  .icon-mail:before { content: '\e805'; }
-  .icon-down-open:before { content: '\f004'; }
-  .icon-up-open:before { content: '\f005'; }
-  .icon-right-open:before { content: '\f006'; }
-  .icon-left-open:before { content: '\f007'; }
-  .icon-twitter:before { content: '\f099'; }
-  .icon-mail-alt:before { content: '\f0e0'; }
-  .icon-linkedin:before { content: '\f0e1'; }
-  .icon-youtube:before { content: '\f16a'; }
-  .icon-instagram:before { content: '\f16d'; }
-  .icon-facebook:before { content: '\f308'; }
-  
-  
+}
+
+.icon-down:before {
+    content: '\e800';
+}
+.icon-left:before {
+    content: '\e801';
+}
+.icon-right:before {
+    content: '\e802';
+}
+.icon-up:before {
+    content: '\e803';
+}
+.icon-zoom-in:before {
+    content: '\e804';
+}
+.icon-mail:before {
+    content: '\e805';
+}
+.icon-down-open:before {
+    content: '\f004';
+}
+.icon-up-open:before {
+    content: '\f005';
+}
+.icon-right-open:before {
+    content: '\f006';
+}
+.icon-left-open:before {
+    content: '\f007';
+}
+.icon-twitter:before {
+    content: '\f099';
+}
+.icon-mail-alt:before {
+    content: '\f0e0';
+}
+.icon-linkedin:before {
+    content: '\f0e1';
+}
+.icon-youtube:before {
+    content: '\f16a';
+}
+
+.icon-facebook:before {
+    content: '\f09a';
+} /* '' */
+.icon-instagram:before {
+    content: '\f16d';
+} /* '' */
