add styles to header when scrolled

--- a/wp-content/themes/publiframework/assets/src/scss/global/_base.scss
+++ b/wp-content/themes/publiframework/assets/src/scss/global/_base.scss
@@ -20,6 +20,7 @@ body {
 
 // Sticky footer
 #main-wrapper {
+    padding-top: var(--header-height);
     flex-grow: 1;
 }
 
@@ -39,32 +40,4 @@ img {
 
 video {
     display: block;
-}
-
-// Body on load layer
-.body-loading {
-    overflow: hidden;
-}
-
-.body-loader {
-    position: fixed;
-    top: 0;
-    left: 0;
-    right: 0;
-    bottom: 0;
-    background: #fff;
-    z-index: 999999999;
-    // hide on doc ready with JS
-    &.fadeout {
-        animation: fadeLoaderOut 0.2s 0.2s linear forwards;
-    }
-}
-
-@keyframes fadeLoaderOut {
-    from {
-        opacity: 1;
-    }
-    to {
-        opacity: 0;
-    }
 }
