--- a/wp-content/themes/publiframework/assets/src/scss/utils/variabili.scss
+++ b/wp-content/themes/publiframework/assets/src/scss/utils/variabili.scss
@@ -77,5 +77,6 @@ $font-bold: 700;
 // Dynamic values
 :root {
     --body-font-size: 1.8rem; // 16px
-    --header-scrolled-height: 17.4rem;
+    --header-height: 17.4rem;
+    --header-scrolled-height: 7.4rem;
 }
