--- a/wp-content/themes/publiframework/assets/src/scss/blocks/block-slider-fullwidth.scss
+++ b/wp-content/themes/publiframework/assets/src/scss/blocks/block-slider-fullwidth.scss
@@ -22,6 +22,7 @@
             align-items: center;
             padding: 4rem 0;
 
+            // overlay
             &::before {
                 content: '';
                 position: absolute;
