--- a/wp-content/themes/publiframework/assets/src/scss/global/_mixins.scss
+++ b/wp-content/themes/publiframework/assets/src/scss/global/_mixins.scss
@@ -34,7 +34,6 @@
 
 @mixin section-title($size: 'medium') {
     font-weight: $font-bold;
-    font-size: 5rem;
     line-height: 1.2;
 
     & > * {
@@ -50,6 +49,11 @@
 
     @if $size == 'small' {
         font-size: 3rem;
+    } @else if $size == 'large' {
+        font-size: 8rem;
+        line-height: 1.1;
+    } @else {
+        font-size: 5rem;
     }
 }
 
@@ -70,18 +74,22 @@
     list-style: none;
     padding-left: 0;
     li {
-        display: flex;
-        margin-bottom: 0.5rem;
+        position: relative;
+        padding-left: 4rem;
+        margin-bottom: 2rem;
 
-        &:before {
+        &:after {
+            position: absolute;
             content: '';
-            flex-shrink: 0;
-            margin-top: 1.2rem;
-            margin-right: 1.5rem;
-            width: 0.5rem;
-            height: 0.5rem;
-            border-radius: 50%;
-            background-color: $primary;
+            display: block;
+            top: 0.5rem;
+            left: 0;
+            width: 2rem;
+            height: 2rem;
+            background-image: url('../images/round-arrow.svg');
+            background-size: contain;
+            background-repeat: no-repeat;
+            background-position: center;
         }
     }
 }
