--- a/wp-content/themes/publiframework/templates/partial/menu.twig
+++ b/wp-content/themes/publiframework/templates/partial/menu.twig
@@ -19,7 +19,7 @@
             {% if item.children %}
                 <ul class="dropdown-menu">
                     {% for child in item.children %}
-                        <li>
+                        <li class="{{ child.classes | join(' ') }}">
                             <a class="dropdown-item"
                                href="{{ child.link }}"
                                     {{ item.is_target_blank ? 'target="_blank"' }}
