add blocchi pagine settori

--- a/wp-content/themes/publiframework/assets/src/index.scss
+++ b/wp-content/themes/publiframework/assets/src/index.scss
@@ -27,6 +27,8 @@
 @import 'scss/blocks/block-text-box-contacts';
 @import 'scss/blocks/block-carousel';
 @import 'scss/blocks/block-banner-testo';
+@import 'scss/blocks/block-boxes-cat-services';
+@import 'scss/blocks/block-google-maps';
 
 // Pages
 //@import './scss/pages/home';
