--- a/wp-content/themes/publiframework/templates/layout/base.twig
+++ b/wp-content/themes/publiframework/templates/layout/base.twig
@@ -12,9 +12,9 @@
     {% include 'layout/header.twig' %}
 
     <div id="content" role="main" class="content-wrapper">
-        {% block breadcrumb %}
-            {% include 'partial/breadcrumb.twig' %}
-        {% endblock breadcrumb %}
+        {#        {% block breadcrumb %} #}
+        {#            {% include 'partial/breadcrumb.twig' %} #}
+        {#        {% endblock breadcrumb %} #}
         {% block content %}
             Sorry, no content
         {% endblock %}
