--- a/wp-content/themes/publiframework/assets/src/scss/global/_typography.scss
+++ b/wp-content/themes/publiframework/assets/src/scss/global/_typography.scss
@@ -39,6 +39,10 @@ h4 {
 
 .section-subtitle {
     @include section-title('small');
+
+    &.primary {
+        color: $primary;
+    }
 }
 
 .titolo_pb {
