--- a/wp-content/themes/publiframework/assets/src/scss/components/_pagination.scss
+++ b/wp-content/themes/publiframework/assets/src/scss/components/_pagination.scss
@@ -2,9 +2,11 @@
     Pagination
  ******************************************************/
 
- .pagination {
+.pagination {
+    display: flex;
+    justify-content: center;
     gap: 1rem;
-    margin-top: 7rem;
+    margin-top: 6rem;
     font-size: 2rem;
 
     li {
