--- a/wp-content/themes/publiframework/templates/partial/pagination.twig
+++ b/wp-content/themes/publiframework/templates/partial/pagination.twig
@@ -1,42 +1,36 @@
 {% if posts.pagination.pages is not empty %}
-
-
-
-
-<nav class="woocommerce-pagination py-3">
-	<ul class="page-numbers">
-
-  
-        
-
-        {# Previous #}
-        {% if posts.pagination.prev %}
-            <a href="{{ posts.pagination.prev.link }}" class="page-numbers prev"><span class="icon-left"></span></a>
-        {% endif %}
-
-    
-        {% for page in posts.pagination.pages %}
-            {% if page.link %}
-                <li>
-                    <a href="{{ page.link }}" class="page-numbers {{ page.class }}">{{ page.title }}</a>
-                </li>
-            {% else %}
-                <li class="current">
-                    <span class="{{ page.class }}">{{ page.title }}</span>
+    <nav class="wrap-pagination">
+        <ul class="pagination list-unstyled">
+            {# Previous #}
+            {% if posts.pagination.prev %}
+                <li class="prev-link">
+                    <a href="{{ posts.pagination.prev.link }}" class="page-numbers prev">
+                        &lt;
+                    </a>
                 </li>
             {% endif %}
-        {% endfor %}
-        
 
-   
-        {% if posts.pagination.next %}
-            <a href="{{ posts.pagination.next.link }}" class="page-numbers next"><span class="icon-right"></span></a>
-        {% endif %}
 
-    
+            {% for page in posts.pagination.pages %}
+                {% if page.link %}
+                    <li class="{{ loop.index == 1 ? 'no-dot' : '' }}">
+                        <a href="{{ page.link }}" class="page-numbers {{ page.class }}">{{ page.title }}</a>
+                    </li>
+                {% else %}
+                    <li class="current {{ loop.index == 1 ? 'no-dot' : '' }}">
+                        <span class="{{ page.class }}">{{ page.title }}</span>
+                    </li>
+                {% endif %}
+            {% endfor %}
 
-        
 
-    </ul>
-</nav>
+            {% if posts.pagination.next %}
+                <li class="next-link">
+                    <a href="{{ posts.pagination.next.link }}" class="page-numbers next">
+                        &gt;
+                    </a>
+                </li>
+            {% endif %}
+        </ul>
+    </nav>
 {% endif %}
